k8script/src/templates/service.yaml
apiVersion: v1
kind: Service
metadata: 
  labels: 
    app: sam-api-srv
  name: sam-api-srv
spec: 
  ports: 
    - 
      name: http
      port: 80
      protocol: TCP
      targetPort: 8000
  selector: 
    app: sam-api-srv
