k8script/src/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: sam-api-ingress
spec:
  rules:
  - host: dsp.corpo.t-mobile.pl
    http:
      paths:
      - backend:
          serviceName: sam-api-srv
          servicePort: http
        path: /glm/api/
